--- a/_/sass/style.scss
+++ b/_/sass/style.scss
@@ -34,3 +34,4 @@ Text Domain: mm
 @import "site/wp-blocks.scss" ;
 @import "blocks/blocks.scss";
 @import "blocks/about.scss";
+@import "blocks/banner.scss";
