--- a/_/sass/site/navigation.scss
+++ b/_/sass/site/navigation.scss
@@ -1,10 +1,14 @@
 .site-navigation {
-    position: relative;
+    width: 100%;
+    background: black;
+    height: 60px;
     display: flex;
-    padding: 15px 50px;
-    padding-right: 100px;
-    align-items: center;
-    height: 90px;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 50px;
+
 
     @include media-breakpoint-down(md) {
         padding: 15px 25px;
