Banner, About Nav

--- a/_/sass/style.scss
+++ b/_/sass/style.scss
@@ -35,3 +35,5 @@ Text Domain: mm
 @import "blocks/blocks.scss";
 @import "blocks/about.scss";
 @import "blocks/banner.scss";
+@import "blocks/headline.scss";
+@import "blocks/headline_line_bottom.scss";
