--- a/_/sass/blocks/about.scss
+++ b/_/sass/blocks/about.scss
@@ -1,2 +1,22 @@
+.about-me-section {
+    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    .about-me-text {
+        width: 45%;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    
+        @include media-breakpoint-down(md) {
+            margin-top: 50px;
+        }
+
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+        }
+
+    }
+}
 
