--- a/_/sass/blocks/banner.scss
+++ b/_/sass/blocks/banner.scss
@@ -1,6 +1,11 @@
 .banner-wrapper {
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
+    margin-top: 60px;
+
+    img {
+        margin-top: 100px;
+    }
 }
