--- a/_/sass/site/fonts.scss
+++ b/_/sass/site/fonts.scss
@@ -13,3 +13,15 @@
     url('_/fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+    font-family: 'Cheddar';
+    font-style: normal;
+    font-weight: 400;
+    src: url('_/fonts/CheddarGothicRough-Regular.eot'); /* IE9 Compat Modes */
+    src: local('Roboto'), local('Roboto-Regular'),
+    url('_/fonts/CheddarGothicRough-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('_/fonts/CheddarGothicRough-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('_/fonts/CheddarGothicRough-Regular.woff') format('woff'), /* Modern Browsers */
+    url('_/fonts/CheddarGothicRough-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('_/fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
