--- a/_/sass/site/typo.scss
+++ b/_/sass/site/typo.scss
@@ -33,3 +33,11 @@ b, strong {
     @include font-size(26px);
     font-style: italic;
 }
+
+p {
+    font-family: Lato, sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    color: white;
+    font-weight: 300;
+}
