Band Section + Headline

--- a/_/sass/style.scss
+++ b/_/sass/style.scss
@@ -37,3 +37,4 @@ Text Domain: mm
 @import "blocks/banner.scss";
 @import "blocks/headline.scss";
 @import "blocks/headline_line_bottom.scss";
+@import "blocks/tilted-wrapper.scss";
