--- a/_/sass/blocks/headline.scss
+++ b/_/sass/blocks/headline.scss
@@ -8,6 +8,19 @@
         background: white;
         width: 50px;
     }
+
+    h5 {
+        font-family: Cheddar, sans-serif;
+        color: #FF0000;
+        opacity: 0.1;
+        font-size: 80px;
+        letter-spacing: 1px;
+        line-height: 120px;
+        text-transform: uppercase;
+        font-weight: 100;
+        text-align: center;
+        position: absolute;
+    }
 }
 
 .headline_with_lines, .headline_without_lines {
@@ -22,4 +35,5 @@
     margin: 0;
     margin: 0 50px;
 }
+
 
