--- a/_/sass/site/typo.scss
+++ b/_/sass/site/typo.scss
@@ -41,3 +41,10 @@ p {
     color: white;
     font-weight: 300;
 }
+
+h6 {
+    font-family: brandon-grotesque, sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 0.9px;
+}
