Kontakt + Tilted Wrapper

--- a/_/sass/site/typo.scss
+++ b/_/sass/site/typo.scss
@@ -48,3 +48,11 @@ h6 {
     font-size: 18px;
     letter-spacing: 0.9px;
 }
+
+h3 {
+    font-family: Cheddar,sans-serif;
+    color: white;
+    font-size: 30px;
+    letter-spacing: 1.5px;
+    font-weight: 100;
+}
