--- a/_/sass/site/form.scss
+++ b/_/sass/site/form.scss
@@ -18,23 +18,61 @@
 
 input[type="submit"] {
     display: flex;
-    padding: 0 75px 0 25px;
-    width: 100%;
-    height: 50px;
     align-items: center;
     justify-content: center;
     background: $white;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     color: $gray;
     border: none;
-    transition: 0.3s ease;
 
-    &:hover, &:focus {
-        background-color: $green;
-        color: $white;
-        border: none;
-        outline: none;
+}
+
+.wpcf7-form {
+    display: flex;
+    flex-direction: column;
+
+
+    ::placeholder {
+        color: #db0f10;
+        font-family: Lato, sans-serif;
+        font-size: 16px; 
+        text-transform: uppercase;   
+    }
+
+    .wpcf7-submit {
+        background: #db0f10;
+        color: white;
+        transition:  border 0.5s ease-in-out, background 0.5s ease-in-out;
+        padding: 5px 0 !important;
+        border: 1px solid #db0f10;
+
+        &:hover {
+            border: 1px solid white;
+            background: none;
+        }
+    }
+
+
+    label  {
+        color: #db0f10;
+        font-family: Lato, sans-serif;
+        font-size: 16px; 
+        text-transform: uppercase;
+        margin-bottom: 15px;   
+
+
+        input {
+            background: none;
+            border-bottom: 1px solid #db0f10 !important;
+            padding-left: 0 !important;
+        }
+    }
+    
+    textarea {
+        border: 1px solid #db0f10;
+        border-radius: 0;
+        background: none;
     }
 }
 
