--- a/_/sass/style.scss
+++ b/_/sass/style.scss
@@ -38,3 +38,5 @@ Text Domain: mm
 @import "blocks/headline.scss";
 @import "blocks/headline_line_bottom.scss";
 @import "blocks/tilted-wrapper.scss";
+@import "blocks/social-media-icons.scss";
+@import "blocks/contact-options.scss"
