--- a/_/sass/site/form.scss
+++ b/_/sass/site/form.scss
@@ -37,7 +37,7 @@ input[type="submit"] {
         color: #db0f10;
         font-family: Lato, sans-serif;
         font-size: 16px; 
-        text-transform: uppercase;   
+        text-transform: uppercase; 
     }
 
     .wpcf7-submit {
@@ -66,6 +66,7 @@ input[type="submit"] {
             background: none;
             border-bottom: 1px solid #db0f10 !important;
             padding-left: 0 !important;
+            color: white;
         }
     }
     
