--- a/_/sass/blocks/about.scss
+++ b/_/sass/blocks/about.scss
@@ -21,6 +21,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @include media-breakpoint-down(md) {
+            margin-top: 350px;
+        }
     
         .about-me-text {
             width: 45%;
