--- a/_/sass/blocks/banner.scss
+++ b/_/sass/blocks/banner.scss
@@ -5,7 +5,26 @@
     background-position: center;
     margin-top: 60px;
 
+    @include media-breakpoint-down(md) {
+        height: 40vh;
+        background-position: right;
+    }
+
+    .container {
+    
+    display: flex;
+    margin-bottom: 100px;
+
     img {
         margin-top: 100px;
+
+        @include media-breakpoint-down(md) {
+            width: 250px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 400px;
+        }
     }
+    }
+
 }
