--- a/_/sass/site/footer.scss
+++ b/_/sass/site/footer.scss
@@ -9,6 +9,24 @@
         .footer-content-left {
             margin-left: 400px;
             padding: 50px 0;
+
+            @include media-breakpoint-down(md) {
+                margin-left: 0;
+                padding: 0 25px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            #menu-hauptmenue-1 {
+                @include media-breakpoint-down(md) {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin: 25px 0 35px 0;
+                }
+            }
         }
 
         .icon-nav-wrapper  {
